// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrustedAppDeletionDialog renders correctly initially 1`] = `
<body>
  <div />
</body>
`;

exports[`TrustedAppDeletionDialog renders correctly when deletion failed 1`] = `
<body
  class="euiBody-hasOverlayMask"
>
  <div />
  <div
    class="euiOverlayMask euiOverlayMask--aboveHeader"
  >
    <div
      data-eui="EuiFocusTrap"
    >
      <div
        class="euiModal euiModal--maxWidth-default"
        tabindex="0"
      >
        <button
          aria-label="Closes this modal window"
          class="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            data-euiicon-type="cross"
          />
        </button>
        <div
          class="euiModal__flex"
        >
          <div
            class="euiModalHeader"
          >
            <div
              class="euiModalHeader__title"
            >
              Remove trusted application
            </div>
          </div>
          <div
            class="euiModalBody"
          >
            <div
              class="euiModalBody__overflow"
            >
              <div
                class="euiText euiText--medium"
              >
                <p>
                  You are removing trusted application "
                  <strong>
                    trusted app 3
                  </strong>
                  ".
                </p>
                <p>
                  This action cannot be undone. Are you sure you wish to continue?
                </p>
              </div>
            </div>
          </div>
          <div
            class="euiModalFooter"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--primary"
              data-test-subj="trustedAppDeletionCancel"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  Cancel
                </span>
              </span>
            </button>
            <button
              class="euiButton euiButton--danger euiButton--fill"
              data-test-subj="trustedAppDeletionConfirm"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Remove trusted application
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TrustedAppDeletionDialog renders correctly when deletion is in progress 1`] = `
<body
  class="euiBody-hasOverlayMask"
>
  <div />
  <div
    class="euiOverlayMask euiOverlayMask--aboveHeader"
  >
    <div
      data-eui="EuiFocusTrap"
    >
      <div
        class="euiModal euiModal--maxWidth-default"
        tabindex="0"
      >
        <button
          aria-label="Closes this modal window"
          class="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            data-euiicon-type="cross"
          />
        </button>
        <div
          class="euiModal__flex"
        >
          <div
            class="euiModalHeader"
          >
            <div
              class="euiModalHeader__title"
            >
              Remove trusted application
            </div>
          </div>
          <div
            class="euiModalBody"
          >
            <div
              class="euiModalBody__overflow"
            >
              <div
                class="euiText euiText--medium"
              >
                <p>
                  You are removing trusted application "
                  <strong>
                    trusted app 3
                  </strong>
                  ".
                </p>
                <p>
                  This action cannot be undone. Are you sure you wish to continue?
                </p>
              </div>
            </div>
          </div>
          <div
            class="euiModalFooter"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty-isDisabled"
              data-test-subj="trustedAppDeletionCancel"
              disabled=""
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  Cancel
                </span>
              </span>
            </button>
            <button
              class="euiButton euiButton--danger euiButton--fill euiButton-isDisabled"
              data-test-subj="trustedAppDeletionConfirm"
              disabled=""
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiLoadingSpinner euiLoadingSpinner--medium euiButtonContent__spinner"
                />
                <span
                  class="euiButton__text"
                >
                  Remove trusted application
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TrustedAppDeletionDialog renders correctly when dialog started 1`] = `
<body
  class="euiBody-hasOverlayMask"
>
  <div />
  <div
    class="euiOverlayMask euiOverlayMask--aboveHeader"
  >
    <div
      data-eui="EuiFocusTrap"
    >
      <div
        class="euiModal euiModal--maxWidth-default"
        tabindex="0"
      >
        <button
          aria-label="Closes this modal window"
          class="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            data-euiicon-type="cross"
          />
        </button>
        <div
          class="euiModal__flex"
        >
          <div
            class="euiModalHeader"
          >
            <div
              class="euiModalHeader__title"
            >
              Remove trusted application
            </div>
          </div>
          <div
            class="euiModalBody"
          >
            <div
              class="euiModalBody__overflow"
            >
              <div
                class="euiText euiText--medium"
              >
                <p>
                  You are removing trusted application "
                  <strong>
                    trusted app 3
                  </strong>
                  ".
                </p>
                <p>
                  This action cannot be undone. Are you sure you wish to continue?
                </p>
              </div>
            </div>
          </div>
          <div
            class="euiModalFooter"
          >
            <button
              class="euiButtonEmpty euiButtonEmpty--primary"
              data-test-subj="trustedAppDeletionCancel"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <span
                  class="euiButtonEmpty__text"
                >
                  Cancel
                </span>
              </span>
            </button>
            <button
              class="euiButton euiButton--danger euiButton--fill"
              data-test-subj="trustedAppDeletionConfirm"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Remove trusted application
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
